--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -73,6 +73,7 @@
   }
 
   @media screen and (min-width: $desktop) {
+    text-align: unset;
     margin-left: 70px;
   }
 }
